Fix color box alignment

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h2 {
     margin: 30px 0;
 }
 h3 {
-    margin: 15px 0;
+    margin: 0;
 }
 nav li {
     display: inline;
@@ -31,12 +31,23 @@ nav a {
 main {
     margin: 30px 20%;
 }
+section {
+    display: block;
+}
 section > div {
     margin: 35px 0;
 }
-.color-box {
+.color {
+    height: 75px;
+}
+.color > div {
     width: 100px;
-    height: 75px
+    display: inline-block;
+    height: 75px;
+    vertical-align: top;
+}
+.color-text h3 {
+    margin: 0;
 }
 #primary-color-box {
     background-color: #45a7ba;
